# ravel

./: .envrc  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  Taskfile.yml  deny.toml  devenv.nix  devenv.yaml  panache.toml  ravel.toml
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yml  coverage.yml  lint.yml
docs/: .gitignore  _quarto.yml  index.qmd  theme-dark.scss
docs/filters/: pre-render.lua  promote-heading-to-title.lua
scripts/: logo.R
src/: ast.rs  cli.rs  config.rs  file_discovery.rs  format_check.rs  formatter.rs  incremental.rs  lib.rs  lint_check.rs  linter.rs  lsp.rs  main.rs  parser.rs  syntax.rs
src/ast/: nodes.rs
src/formatter/: check.rs  context.rs  core.rs  ir.rs  printer.rs  render.rs  rules.rs  style.rs  trivia.rs
src/linter/: check.rs
src/parser/: bracket_balancer.rs  context.rs  core.rs  cursor.rs  diagnostics.rs  engine.rs  events.rs  expr.rs  lexer.rs  recovery.rs  structural.rs  tree_builder.rs
tests/: air_parser_harness.rs  ast_wrappers.rs  config.rs  formatter.rs  formatter_e2e_fixtures.rs  formatter_snapshots.rs  line_endings.rs  lint.rs  lsp.rs  parser_snapshots.rs  salsa_incremental.rs
tests/snapshots/: formatter__air_binary_expression_sticky_subset_formatted.snap  formatter__air_binary_expression_subset_formatted.snap  formatter__air_braced_expressions_formatted.snap  formatter__air_call_formatted.snap  formatter__air_comment_formatted.snap  formatter__air_dot_dot_i_formatted.snap  formatter__air_function_definition_formatted.snap  formatter__air_keyword_formatted.snap  (+208 more)
(+170 files in other folders)
