[package]
name = "ravel"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "An LSP, formatter, and linter for R"
license = "MIT"
repository = "https://github.com/jolars/ravel"
# homepage = "https://jolars.github.io/ravel"
authors = ["Johan Larsson <johan@jolars.co>"]
keywords = ["r", "language-server", "formatter", "linter"]
categories = [
  "command-line-utilities",
  "text-processing",
  "parsing",
  "parser-implementations",
]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
globset = "0.4.18"
ignore = "0.4.25"
log = { version = "0.4.29", features = ["release_max_level_info"] }
rayon = "1.11.0"
rowan = "0.16.1"
salsa = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
tokio = { version = "1.51.0", features = [
  "process",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "time",
  "macros",
  "fs",
] }
toml = "1.1.0"
tower-lsp-server = "0.23.0"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
insta = "1.47.1"
air_r_parser = { git = "https://github.com/posit-dev/air", rev = "4cbd36d552e27d8930cff1602d56bfd9ce4c1ed1" }

[build-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap-markdown = "0.1.5"
clap_complete = "4.6.0"
clap_mangen = "0.3.0"
